feat: Add biased lock demo.