@@ -2,6 +2,8 @@ package org.example.synchronize;
 
 import org.openjdk.jol.info.ClassLayout;
 
+import java.util.concurrent.TimeUnit;
+
 /**
  * @author jason
  * @description
@@ -9,6 +11,29 @@ import org.openjdk.jol.info.ClassLayout;
  **/
 public class SynchronizedUpDemo {
     public static void main(String[] args) {
+//        noLock();
+
+        biasedLock();
+    }
+
+    private static void biasedLock() {
+        /**
+         * Edit configuration -> Add VM options
+         *
+         * 設置沒有延時  -XX:BiasedLockingStartupDelay=0 => Java8默認是4000ms
+         * 開啟偏向鎖    -XX:+UseBiasedLocking   => Java15後默認關閉(默認不啟用偏向鎖)
+         */
+
+        //也可以不加參數，暫停5秒讓偏向鎖生效
+//        try { TimeUnit.SECONDS.sleep(5); } catch (InterruptedException e) { e.printStackTrace(); }
+
+        Object o = new Object();
+        synchronized (o) {
+            System.out.println(ClassLayout.parseInstance(o).toPrintable());
+        }
+    }
+
+    private static void noLock() {
         Object o = new Object();
 
         //如果有調用hashCode()方法，才會去紀錄Hash編碼
